--- a/package.json
+++ b/package.json
@@ -7,18 +7,22 @@
     "test": "jest"
   },
   "dependencies": {
+    "fbjs": "^0.8.16",
     "react": "16.3.1",
     "react-native": "0.55.4",
     "react-native-elements": "^0.19.1",
     "react-native-swiper": "^1.5.13",
     "react-native-vector-icons": "^4.6.0",
-    "react-navigation": "^2.3.1"
+    "react-navigation": "^2.3.1",
+    "react-native-firebase": "^4.1.0"
   },
   "devDependencies": {
     "babel-jest": "23.0.1",
     "babel-preset-react-native": "4.0.0",
+    "fs-extra": "^4.0.2",
     "jest": "23.1.0",
-    "react-test-renderer": "16.3.1"
+    "react-test-renderer": "16.3.1",
+    "replace-in-file": "^3.0.0"
   },
   "jest": {
     "preset": "react-native"
