--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "react": "16.3.1",
     "react-native": "0.55.4",
     "react-native-elements": "^0.19.1",
+    "react-native-firebase": "^4.1.0",
     "react-native-swiper": "^1.5.13",
     "react-native-vector-icons": "^4.6.0",
-    "react-navigation": "^2.3.1",
-    "react-native-firebase": "^4.1.0"
+    "react-navigation": "^2.3.1"
   },
   "devDependencies": {
     "babel-jest": "23.0.1",
