change avatar from edit profile modal

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -23,4 +23,8 @@ target 'lapar' do
   
   pod 'Fabric', '~> 1.7.6'
   pod 'Crashlytics', '~> 3.10.1'
+  pod 'react-native-image-picker', :path => '../node_modules/react-native-image-picker'
+
+  pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
+
 end
