--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -148,6 +148,11 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-vector-icons')
+    compile project(':react-native-image-picker')
+    compile(project(':react-native-firebase')) {
+        transitive = false
+    }
     implementation(project(':react-native-firebase')) {
         transitive = false
     }
@@ -171,7 +176,6 @@ dependencies {
         transitive = true
     }
 
-    // classpath 'com.android.tools.build:gradle:2.3.3'
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.android.support:appcompat-v7:27.0.2"
     implementation "com.facebook.react:react-native:+"  // From node_modules
