--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "react-native": "0.55.4",
     "react-native-elements": "^0.19.1",
     "react-native-firebase": "^4.1.0",
-    "react-native-ratings": "^5.3.0",
     "react-native-image-picker": "^0.26.10",
+    "react-native-ratings": "^5.3.0",
+    "react-native-simple-radio-button": "^2.7.2",
     "react-native-swiper": "^1.5.13",
     "react-native-vector-icons": "^4.6.0",
     "react-navigation": "^2.3.1"
