--- a/ios/Podfile
+++ b/ios/Podfile
@@ -27,4 +27,6 @@ target 'lapar' do
 
   pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
 
+  pod 'rn-fetch-blob', :path => '../node_modules/rn-fetch-blob'
+
 end
