--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "react-native-simple-radio-button": "^2.7.2",
     "react-native-swiper": "^1.5.13",
     "react-native-vector-icons": "^4.6.0",
-    "react-navigation": "^2.3.1",
-    "rn-fetch-blob": "^0.10.11"
+    "react-navigation": "^2.3.1"
   },
   "devDependencies": {
     "babel-jest": "23.0.1",
