--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "blob": "0.0.4",
     "fbjs": "^0.8.16",
     "react": "16.3.1",
     "react-native": "0.55.4",
