--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "react-native-simple-radio-button": "^2.7.2",
     "react-native-swiper": "^1.5.13",
     "react-native-vector-icons": "^4.6.0",
-    "react-navigation": "^2.3.1"
+    "react-navigation": "^2.3.1",
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.0"
   },
   "devDependencies": {
     "babel-jest": "23.0.1",
