--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   "dependencies": {
     "blob": "0.0.4",
     "fbjs": "^0.8.16",
-    "react": "16.3.1",
-    "react-native": "0.55.4",
+    "react": "16.4.1",
+    "react-native": "0.56.0",
     "react-native-elements": "^0.19.1",
     "react-native-firebase": "^4.1.0",
     "react-native-image-picker": "^0.26.10",
@@ -20,14 +20,15 @@
     "react-native-vector-icons": "^4.6.0",
     "react-navigation": "^2.3.1",
     "react-redux": "^5.0.7",
-    "redux": "^4.0.0"
+    "redux": "^4.0.0",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
-    "babel-jest": "23.0.1",
-    "babel-preset-react-native": "4.0.0",
-    "fs-extra": "^4.0.2",
-    "jest": "23.1.0",
-    "react-test-renderer": "16.3.1",
+    "babel-jest": "23.4.0",
+    "babel-preset-react-native": "^5.0.0",
+    "fs-extra": "^6.0.1",
+    "jest": "23.4.0",
+    "react-test-renderer": "16.4.1",
     "replace-in-file": "^3.0.0"
   },
   "jest": {
