--- a/package.json
+++ b/package.json
@@ -10,22 +10,22 @@
     "blob": "0.0.4",
     "fbjs": "^0.8.16",
     "react": "16.4.1",
-    "react-native": "0.56.0",
+    "react-native": "0.55.4",
     "react-native-elements": "^0.19.1",
-    "react-native-firebase": "^4.1.0",
+    "react-native-firebase": "^4.3.5",
     "react-native-image-picker": "^0.26.10",
     "react-native-ratings": "^5.3.0",
     "react-native-simple-radio-button": "^2.7.2",
     "react-native-swiper": "^1.5.13",
     "react-native-vector-icons": "^4.6.0",
-    "react-navigation": "^2.3.1",
+    "react-navigation": "^2.6.2",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "babel-jest": "23.4.0",
-    "babel-preset-react-native": "^5.0.0",
+    "babel-preset-react-native": "4.0.0",
     "fs-extra": "^6.0.1",
     "jest": "23.4.0",
     "react-test-renderer": "16.4.1",
