--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "fbjs": "^0.8.16",
     "react": "16.4.1",
     "react-native": "0.55.4",
+    "react-native-action-button": "^2.8.4",
     "react-native-elements": "^0.19.1",
     "react-native-firebase": "^4.3.5",
     "react-native-image-picker": "^0.26.10",
