--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-native-ratings": "^5.3.0",
     "react-native-simple-radio-button": "^2.7.2",
     "react-native-swiper": "^1.5.13",
+    "react-native-tag-autocomplete": "^1.0.21",
     "react-native-vector-icons": "^4.6.0",
     "react-navigation": "^2.6.2",
     "react-redux": "^5.0.7",
